# Media-Optimus

./: IMPORTANT  README.md  pyproject.toml
mediaoptimus/: converter_panel.py  mediaoptimus.py  results_panel.py
